unpackaged/main/default/objects/SFMCCredentials__mdt/SFMCCredentials__mdt.object-meta.xml
<CustomObject>
    <label>SFMCCredential</label>
    <pluralLabel>SFMCCredentials</pluralLabel>
</CustomObject>