unpackaged/main/default/objects/SFMCCredentials__mdt/fields/ACCESS_TOKEN__c.field-meta.xml
<CustomField>
    <fullName>ACCESS_TOKEN__c</fullName>
    <label>ACCESS_TOKEN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>