unpackaged/main/default/objects/SFMCCredentials__mdt/fields/Exipration_Date_Token__c.field-meta.xml
<CustomField>
    <fullName>Exipration_Date_Token__c</fullName>
    <label>Exipration Date Token</label>
    <type>DateTime</type>
</CustomField>