unpackaged/main/default/objects/SFMCCredentials__mdt/fields/MARKETING_CLOUD_AUTH_URL__c.field-meta.xml
<CustomField>
    <fullName>MARKETING_CLOUD_AUTH_URL__c</fullName>
    <label>Marketing Cloud Auth URL</label>
    <type>Url</type>
</CustomField>