unpackaged/main/default/objects/SFMCCredentials__mdt/fields/MARKETING_CLOUD_CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>MARKETING_CLOUD_CLIENT_ID__c</fullName>
    <label>Client_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>