unpackaged/main/default/objects/SFMCCredentials__mdt/fields/MARKETING_CLOUD_CLIENT_SECRET__c.field-meta.xml
<CustomField>
    <fullName>MARKETING_CLOUD_CLIENT_SECRET__c</fullName>
    <label>Client_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>