unpackaged/main/default/objects/SFMCCredentials__mdt/fields/Soap_Url__c.field-meta.xml
<CustomField>
    <fullName>Soap_Url__c</fullName>
    <label>Soap Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>